objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Backlog</fullName>
        <description>Backlog</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Backlog</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deployed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Purina Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Request Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Arrange Return</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
        </values>
        <values>
            <fullName>Liability Follow-up Pending</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Credit</fullName>
        </values>
        <values>
            <fullName>Ready to Credit - Inventory</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Waiting for Approval</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer Response</fullName>
        </values>
        <values>
            <fullName>Waiting for Documentation</fullName>
        </values>
        <values>
            <fullName>Waiting for Resolution</fullName>
        </values>
        <values>
            <fullName>Waiting for Return</fullName>
        </values>
        <values>
            <fullName>Waiting for Sample</fullName>
        </values>
        <values>
            <fullName>Waiting for VOD</fullName>
        </values>
        <values>
            <fullName>Waiting to Invoice</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Case</fullName>
        <description>Used for general support cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>Dealer Account City and State</description>
        <formula>Account.Dealer_Location__c</formula>
        <inlineHelpText>Dealer Account City and State</inlineHelpText>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mailing_Name__c</fullName>
        <formula>Account.Mailing_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mailing Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Name of the Account for the Contact on the Service Request</description>
        <formula>Contact.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Complaint_Information__c</fullName>
        <description>Additional Complaint Information, if needed.</description>
        <label>Additional Complaint Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Total__c</fullName>
        <description>Calculation - Formula: Adjustment Total = Net Billing Amount - Net Credit Amount.</description>
        <formula>Net_Billing_Amount__c  -  Net_Credit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of service request</description>
        <formula>Now()-CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age = Number of Days</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Approver for the Service Request</description>
        <label>Alternate Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alternate_Approver_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Return_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The alternate plant to which product is to be returned.</description>
        <label>Alternate Return Plant</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Cases (Return Plant)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Animal_Performance_Details__c</fullName>
        <description>Details about animal performance</description>
        <label>Animal Performance Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Animal_Performance_Issues__c</fullName>
        <description>Issues about animal performance</description>
        <label>Animal Performance Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bloat</fullName>
                </value>
                <value>
                    <fullName>Choke</fullName>
                </value>
                <value>
                    <fullName>Colic</fullName>
                </value>
                <value>
                    <fullName>Diarrhea</fullName>
                </value>
                <value>
                    <fullName>Egg Production Loss</fullName>
                </value>
                <value>
                    <fullName>Lethargy</fullName>
                </value>
                <value>
                    <fullName>Milk Production Loss</fullName>
                </value>
                <value>
                    <fullName>Mortality</fullName>
                </value>
                <value>
                    <fullName>Other Illness</fullName>
                </value>
                <value>
                    <fullName>Poor Growth</fullName>
                </value>
                <value>
                    <fullName>Reproduction</fullName>
                </value>
                <value>
                    <fullName>Vomiting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Regional_Customer_Ops_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backend field used to populate the appropriate user for approval processes.</description>
        <label>Area/Regional Customer Ops Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Customer_Ops_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backend field used to populate the appropriate user for approval processes.</description>
        <label>Area Service Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign To</description>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Date__c</fullName>
        <description>Auto Close date set for 2 business days after second notice minus 1 day</description>
        <formula>DATETIMEVALUE( Reminder_First_Notice__c + 
CASE( 
MOD( Reminder_First_Notice__c - DATE( 1900, 1, 7 ), 7 ), 
3, 5,
4, 5,
5, 5,
6, 4,
3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Reminder Auto Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Issued_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who issued the billing</description>
        <label>Billing Issued By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2G6M</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Link_User_Name__c</fullName>
        <description>Business Link User Name</description>
        <label>Business Link User Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tracking_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who was the customer service personnel</description>
        <label>CS Tracking Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_CS_Tracking_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the shipping carrier</description>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases_Carrier</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Id_to_Url__c</fullName>
        <description>get the id ocated in the url</description>
        <formula>LEFT(X18_Digit_Case_ID__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id to Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Notes__c</fullName>
        <description>Notes about the case.</description>
        <label>Case Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Complaint_Reported_By__c</fullName>
        <description>Which type of contact created the complaint. Based on the Contact selected</description>
        <formula>TEXT( Contact.Contact_Type__c )</formula>
        <label>Complaint Reported By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Resolution__c</fullName>
        <description>How was the complaint resolved</description>
        <label>Complaint Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_Notes__c</fullName>
        <description>Configuration Notes</description>
        <label>Configuration Notes</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Consumer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Consumer Contact for the Service Request</description>
        <label>Consumer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Consumer Contact)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>TEXT(Contact.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>TEXT(Contact.Contact_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>The unique identifier of the contract</description>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <description>The SFDC role of the person who created the case.</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Same_As_Logged_in_User_Ind__c</fullName>
        <description>If the logged in user is the same as the created by on the case, then &quot;Yes&quot; else &quot;No&quot;.</description>
        <formula>If( $User.X18_Digit_User_ID__c =  CreatedBy.X18_Digit_User_ID__c , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Same As Logged in User Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date the Service Request was created</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_in_last_24_hours__c</fullName>
        <description>Flag to mark new service requests created in the last 24 hours</description>
        <formula>IF ( NOW() - CreatedDate &lt; 1 ,true, false )</formula>
        <label>Created in last 24 hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Range__c</fullName>
        <description>Credit amount range requested by the customer. Used for approval process routing</description>
        <label>Credit Amount Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$0 - $100</fullName>
                </value>
                <value>
                    <fullName>$101 - $500</fullName>
                </value>
                <value>
                    <fullName>$501 - $1,000</fullName>
                </value>
                <value>
                    <fullName>$1,001 - $2,000</fullName>
                </value>
                <value>
                    <fullName>$2,001 - $5,000</fullName>
                </value>
                <value>
                    <fullName>$5,001 - $10,000</fullName>
                </value>
                <value>
                    <fullName>Over $10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Issued_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who issued the credit</description>
        <label>Credit Issued By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Credit_Issued_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Number__c</fullName>
        <description>Identifier for credit issued</description>
        <label>Credit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <description>Type of credit issued</description>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CQ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>SX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Care_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Care Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Customer Care</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Care Cases</relationshipLabel>
        <relationshipName>Customer_Care_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Plant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the plant a customer care plant</description>
        <label>Customer Care Plant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Issue_Type__c</fullName>
        <label>Customer Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Damaged Product (torn)</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Order Accuracy</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Promotion (rebate)</fullName>
                </value>
                <value>
                    <fullName>Outdated Product</fullName>
                </value>
                <value>
                    <fullName>Customer Accommodation</fullName>
                </value>
                <value>
                    <fullName>Poor Flow/Bricked Product</fullName>
                </value>
                <value>
                    <fullName>Excessive Fines</fullName>
                </value>
                <value>
                    <fullName>Liquid Application</fullName>
                </value>
                <value>
                    <fullName>Infestation</fullName>
                </value>
                <value>
                    <fullName>Mold/Off Odor</fullName>
                </value>
                <value>
                    <fullName>Accolades</fullName>
                </value>
                <value>
                    <fullName>Bag/tag issues</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Other</fullName>
                </value>
                <value>
                    <fullName>Replenishment Planning</fullName>
                </value>
                <value>
                    <fullName>Under or Over Consumption</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Ops_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Ops Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Customer_Ops_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Ops_Plant_Type__c</fullName>
        <description>Customer Ops Plant Type</description>
        <formula>TEXT(Shipping_Plant_Lookup__r.Customer_Ops_Plant_Type__c)</formula>
        <label>Customer Ops Plant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <description>Customer purchase order</description>
        <label>Customer PO</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Purina Customer Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Service Cases</relationshipLabel>
        <relationshipName>Customer_Service_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Issue__c</fullName>
        <label>Customer Service Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>This field is used to identify the data source when data loading data.</description>
        <label>Data Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_to_Push_Password__c</fullName>
        <description>Date to Push Password</description>
        <label>Date to Push Password</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <description>The number of business days from creation to close.</description>
        <formula>IF(IsClosed = True,
(DATEVALUE(ClosedDate) - DATEVALUE( CreatedDate )) -
( FLOOR ( ( ( (DATEVALUE(ClosedDate)) - DATEVALUE(CreatedDate)) / 7 ) ) * 2 ) +
CASE(MOD ( DATEVALUE(CreatedDate) - DATE( 1900,1,6 ),7),
0,CASE( MOD ((DATEVALUE(ClosedDate)) - DATE( 1900,1,6 ),7),0,1,2 ),
1,CASE( MOD ((DATEVALUE(ClosedDate)) - DATE( 1900,1,6 ),7),0,2,1 ),
IF(MOD(DATEVALUE(CreatedDate) - DATE( 1900,1,6 ),7) - MOD((DATEVALUE(ClosedDate)) - DATE( 1900,1,6 ),7) &lt;= 0 ,0,
IF(MOD((DATEVALUE(ClosedDate)) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) )
,
((TODAY()) - DATEVALUE( CreatedDate )) -
( FLOOR ( ( ( (TODAY()) - DATEVALUE(CreatedDate)) / 7 ) ) * 2 ) +
CASE(MOD ( DATEVALUE(CreatedDate) - DATE( 1900,1,6 ),7),
0,CASE( MOD ((TODAY()) - DATE( 1900,1,6 ),7),0,1,2 ),
1,CASE( MOD ((TODAY()) - DATE( 1900,1,6 ),7),0,2,1 ),
IF(MOD(DATEVALUE(CreatedDate) - DATE( 1900,1,6 ),7) - MOD((TODAY()) - DATE( 1900,1,6 ),7) &lt;= 0 ,0,
IF(MOD((TODAY()) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of business days from creation to close.</inlineHelpText>
        <label>Business Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealer that is associated to Consumer Service Request</description>
        <label>Dealer</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Value must be a Dealer or National Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer Coop Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>National Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Requests (Dealer)</relationshipLabel>
        <relationshipName>ConsumerServiceRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Customer_Op_Rep__c</fullName>
        <description>Dedicated Customer Op Rep for the Account the Contact is related to for the Service Request</description>
        <formula>Contact.Account.Dedicated_Customer_Op_Rep__r.Full_Name__c</formula>
        <label>Dedicated Customer Op Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Date_Month_Yr__c</fullName>
        <formula>case(text(Month(Delivery_Date__c)),
&quot;1&quot;,&quot;January&quot;,
&quot;2&quot;,&quot;February&quot;,
&quot;3&quot;,&quot;March&quot;, 
&quot;4&quot;,&quot;April&quot;,
&quot;5&quot;,&quot;May&quot;,
&quot;6&quot;,&quot;June&quot;,
&quot;7&quot;,&quot;July&quot;, 
&quot;8&quot;,&quot;August&quot;,
&quot;9&quot;,&quot;September&quot;,
&quot;10&quot;,&quot;October&quot;,
&quot;11&quot;,&quot;November&quot;,
&quot;12&quot;,&quot;December&quot;,
&quot;N/A&quot;) &amp; &quot; &quot;&amp;text(Year(Delivery_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliver Date (Month Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Estimated delivery date</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>Disposition of service request</description>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return to Stock</fullName>
                </value>
                <value>
                    <fullName>RPM/salvage</fullName>
                </value>
                <value>
                    <fullName>Dispose</fullName>
                </value>
                <value>
                    <fullName>Other (Add to Condition field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effort_Size__c</fullName>
        <description>Size of effort</description>
        <label>Effort Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Requestor__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number_of_New_User__c</fullName>
        <description>Employee number for new user.</description>
        <label>Employee Number of New User</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Address__c</fullName>
        <description>Address line of consumer</description>
        <formula>Consumer_Contact__r.MailingStreet</formula>
        <label>End User Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Business_Name__c</fullName>
        <description>Business name of consumer</description>
        <formula>Consumer_Contact__r.Account.Name</formula>
        <label>End User Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_City__c</fullName>
        <description>City of consumer</description>
        <formula>Consumer_Contact__r.MailingCity</formula>
        <label>End User City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Email_Address__c</fullName>
        <description>E-mail address of consumer</description>
        <formula>Consumer_Contact__r.Email</formula>
        <label>End User Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_State__c</fullName>
        <description>State of consumer</description>
        <formula>Consumer_Contact__r.MailingState</formula>
        <label>End User State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Telephone__c</fullName>
        <description>Telephone of consumer</description>
        <formula>Consumer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Zip__c</fullName>
        <description>Zip code of consumer</description>
        <formula>Consumer_Contact__r.MailingPostalCode</formula>
        <label>End User Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environments__c</fullName>
        <label>Environments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BreakFxDev</fullName>
                </value>
                <value>
                    <fullName>BreakFxQA</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <label>Error Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Name__c</fullName>
        <description>Who contributed to this error</description>
        <label>Error Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FARM_VIP_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FARM VIP Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>text(Requestor__r.Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function</label>
        <type>Text</type>
    </fields>
</CustomObject>